overflow fix

--- a/css/global.css
+++ b/css/global.css
@@ -44,7 +44,7 @@ main {
     height: 100vh;
     margin: 0;
     position: relative;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
 }
 
 body {
